# GraphBuilder

./: .env.example  .gitignore  Dockerfile  MIGRATION_GUIDE.md  README.md  README_IMPROVED.md  README_ZH.md  __init__.py  cli.py  condaenv.rnehk3uw.requirements.txt  dbAccess.py  demo.py  docker-compose.yml  environment.yml  graphTransformer.py  langChainWeb.ipynb  llm.py  local_file.py  main.py  main_improved.py  main_json.py  main_json_improved.py  main_para.py  main_test.py  main_url.py  main_url_sync.py  migrate.py  processing.py  pyproject.toml  requirements.txt  setup.py  sync_urlRetriever.py  tree.py  url_retriever.py  visited_links.txt  webpage_retriever.py
ImageEmbed/: clip.py  getPictures.py
database/: __init__.py  repositories.py
legacy/: README.md
legacy/database/: connection.py
legacy/entities/: __init__.py  chunk.py
legacy/old_modules/: dbAccess.py  json_retriever.py  llm.py  processing.py  webpage_retriever.py
legacy/scripts/: app.py  config.py  exceptions.py  logger_config.py  main_para.py  main_test.py  main_url.py  main_url_sync.py  sample_fromJson.py  summary.py
legacy/services/: __init__.py  document_service.py  llm_service.py
legacy/shared/: constants.py
legacy/utils/: helpers.py  validators.py
services/: crawler_service.py
shared/: common_fn.py
src/graphbuilder/: __init__.py  __main__.py
src/graphbuilder/application/: __init__.py
src/graphbuilder/cli/: main.py
src/graphbuilder/core/: __init__.py
src/graphbuilder/domain/: __init__.py
src/graphbuilder/examples/: json_sample.py
utils/: __init__.py
(+30 files in other folders)
